components/wiki-mechanicum/patch-delete-helm-pod.yaml
---
$patch: delete
apiVersion: v1
kind: Pod
metadata:
  name: wiki.js-test-connection
  #namespace: wiki-js
