components/wiki-mechanicum/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-js
  namespace: wiki-js
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.13.13
    cert-manager.io/cluster-issuer: "local-ca-issuer"
spec:
  ingressClassName: cilium
  rules:
  - host: mechanicum.nekropolis.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki
            port:
              number: 80
  - host: mechanicum.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki
            port:
              number: 80
  tls:
  - hosts:
    - mechanicum.irminsul
    - mechanicum.nekropolis.irminsul
    secretName: wiki-certificate
